objects/SDOC__SDField__c.object
<CustomObject   >
    <fields>
        <fullName>SDOC__CurrencyValue__c</fullName>
        <label>CurrencyValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDOC__DateTimeValue__c</fullName>
        <label>DateTimeValue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDOC__EmailValue__c</fullName>
        <label>EmailValue</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SDOC__FieldName__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__FieldType__c</fullName>
        <label>FieldType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__NumberValue__c</fullName>
        <label>NumberValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__PhoneValue__c</fullName>
        <label>PhoneValue</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc__c</fullName>
        <label>SDoc</label>
        <referenceTo>SDOC__SDoc__c</referenceTo>
        <relationshipLabel>SDoc Fields</relationshipLabel>
        <relationshipName>SDocFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SDOC__TextValue__c</fullName>
        <label>TextValue</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>